implementing archive notes (#383)
* implementing archive notes

* implementing archive notes

* implementing archive notes

* implementing archive notes
