# src/main/kotlin/uk/gov/justice/digital/hmpps/educationandworkplanapi/app/resource/GoalController.kt
@@ -16,8 +16,14 @@ import org.springframework.web.bind.annotation.RequestMapping
 import org.springframework.web.bind.annotation.RequestParam
 import org.springframework.web.bind.annotation.ResponseStatus
 import org.springframework.web.bind.annotation.RestController
+import uk.gov.justice.digital.hmpps.domain.learningandworkprogress.note.dto.CreateNoteDto
+import uk.gov.justice.digital.hmpps.domain.learningandworkprogress.note.dto.EntityType
+import uk.gov.justice.digital.hmpps.domain.learningandworkprogress.note.dto.NoteType
+import uk.gov.justice.digital.hmpps.domain.learningandworkprogress.note.service.NoteService
+import uk.gov.justice.digital.hmpps.domain.personallearningplan.Goal
 import uk.gov.justice.digital.hmpps.domain.personallearningplan.dto.GetGoalsDto
 import uk.gov.justice.digital.hmpps.domain.personallearningplan.service.GoalService
+import uk.gov.justice.digital.hmpps.educationandworkplanapi.app.database.jpa.mapper.note.NoteMapper
 import uk.gov.justice.digital.hmpps.educationandworkplanapi.app.resource.mapper.actionplan.GoalResourceMapper
 import uk.gov.justice.digital.hmpps.educationandworkplanapi.app.resource.validator.GoalReferenceMatchesReferenceInUpdateGoalRequest
 import uk.gov.justice.digital.hmpps.educationandworkplanapi.app.resource.validator.PRISON_NUMBER_FORMAT
@@ -26,6 +32,7 @@ import uk.gov.justice.digital.hmpps.educationandworkplanapi.resource.model.Creat
 import uk.gov.justice.digital.hmpps.educationandworkplanapi.resource.model.GetGoalsResponse
 import uk.gov.justice.digital.hmpps.educationandworkplanapi.resource.model.GoalResponse
 import uk.gov.justice.digital.hmpps.educationandworkplanapi.resource.model.GoalStatus
+import uk.gov.justice.digital.hmpps.educationandworkplanapi.resource.model.Note
 import uk.gov.justice.digital.hmpps.educationandworkplanapi.resource.model.UnarchiveGoalRequest
 import uk.gov.justice.digital.hmpps.educationandworkplanapi.resource.model.UpdateGoalRequest
 import java.util.UUID
@@ -36,6 +43,7 @@ import java.util.UUID
 class GoalController(
   private val goalService: GoalService,
   private val goalResourceMapper: GoalResourceMapper,
+  private val noteService: NoteService,
 ) {
 
   @PostMapping
@@ -59,7 +67,10 @@ class GoalController(
     @PathVariable @Pattern(regexp = PRISON_NUMBER_FORMAT) prisonNumber: String,
     @PathVariable goalReference: UUID,
   ): GoalResponse {
-    return goalResourceMapper.fromDomainToModel(goalService.getGoal(prisonNumber, goalReference))
+    val response = goalResourceMapper.fromDomainToModel(goalService.getGoal(prisonNumber, goalReference))
+    // Get the archive note and update the response if present
+    val notes = noteService.getNotes(response.goalReference, EntityType.GOAL, NoteType.GOAL_ARCHIVAL)
+    return response.copy(goalNotes = notes.map { Note(it.reference, it.content, NoteMapper.toResourceModel(it.noteType)) })
   }
 
   @PutMapping("{goalReference}")
@@ -86,31 +97,53 @@ class GoalController(
   @PreAuthorize(HAS_EDIT_GOALS)
   @Transactional
   fun archiveGoal(
-    @Valid
-    @RequestBody
-    archiveGoalRequest: ArchiveGoalRequest,
+    @Valid @RequestBody archiveGoalRequest: ArchiveGoalRequest,
     @PathVariable @Pattern(regexp = PRISON_NUMBER_FORMAT) prisonNumber: String,
     @PathVariable goalReference: UUID,
-  ) =
-    goalService.archiveGoal(
+  ): Goal {
+    val goal = goalService.archiveGoal(
       prisonNumber = prisonNumber,
       archiveGoalDto = goalResourceMapper.fromModelToDto(archiveGoalRequest),
     )
+    archiveGoalRequest.note?.let {
+      createGoalNote(prisonNumber, goal, it, NoteType.GOAL_ARCHIVAL)
+    }
+    return goal
+  }
+
+  private fun createGoalNote(prisonNumber: String, goal: Goal, noteText: String, noteType: NoteType) {
+    noteService.createNote(
+      CreateNoteDto(
+        prisonNumber = prisonNumber,
+        entityReference = goal.reference,
+        entityType = EntityType.GOAL,
+        noteType = noteType,
+        content = noteText,
+        createdAtPrison = goal.createdAtPrison,
+        lastUpdatedAtPrison = goal.lastUpdatedAtPrison,
+      ),
+    )
+  }
 
   @PutMapping("{goalReference}/unarchive")
   @ResponseStatus(HttpStatus.NO_CONTENT)
   @PreAuthorize(HAS_EDIT_GOALS)
   @Transactional
   fun unarchiveGoal(
-    @Valid
-    @RequestBody
-    archiveGoalRequest: UnarchiveGoalRequest,
+    @Valid @RequestBody archiveGoalRequest: UnarchiveGoalRequest,
     @PathVariable @Pattern(regexp = PRISON_NUMBER_FORMAT) prisonNumber: String,
     @PathVariable goalReference: UUID,
-  ) = goalService.unarchiveGoal(
-    prisonNumber = prisonNumber,
-    unarchiveGoalDto = goalResourceMapper.fromModelToDto(archiveGoalRequest),
-  )
+  ): Goal {
+    val goal = goalService.unarchiveGoal(
+      prisonNumber = prisonNumber,
+      unarchiveGoalDto = goalResourceMapper.fromModelToDto(archiveGoalRequest),
+    )
+
+    // delete any goal notes
+    noteService.deleteNote(archiveGoalRequest.goalReference, EntityType.GOAL, NoteType.GOAL_ARCHIVAL)
+
+    return goal
+  }
 
   @GetMapping
   @ResponseStatus(HttpStatus.OK)
